--- a/DesktopIntegrador/src/main/java/View/DepenStat.form
+++ b/DesktopIntegrador/src/main/java/View/DepenStat.form
@@ -163,7 +163,7 @@
             <Property name="horizontalAlignment" type="int" value="2"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder justification="1" position="2" title="DESCRIPCI&#xd3;N">
+                <TitledBorder justification="1" position="2" title="* DESCRIPCI&#xd3;N">
                   <Font PropertyName="font" name="Dialog" size="10" style="0"/>
                   <Color PropertyName="color" blue="66" green="66" red="0" type="rgb"/>
                 </TitledBorder>
