--- a/DesktopIntegrador/src/main/java/View/DoctorMan.form
+++ b/DesktopIntegrador/src/main/java/View/DoctorMan.form
@@ -118,7 +118,7 @@
             <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder justification="1" position="2" title="TEL&#xc9;FONO">
+                <TitledBorder justification="1" position="2" title="* TEL&#xc9;FONO">
                   <Font PropertyName="font" name="Dialog" size="10" style="0"/>
                   <Color PropertyName="color" blue="66" green="66" red="0" type="rgb"/>
                 </TitledBorder>
@@ -141,7 +141,7 @@
             <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder justification="1" position="2" title="NOMBRE">
+                <TitledBorder justification="1" position="2" title="* NOMBRE">
                   <Font PropertyName="font" name="Dialog" size="10" style="0"/>
                   <Color PropertyName="color" blue="66" green="66" red="0" type="rgb"/>
                 </TitledBorder>
@@ -164,7 +164,7 @@
             <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder justification="1" position="2" title="PRIMER APELLIDO">
+                <TitledBorder justification="1" position="2" title="* PRIMER APELLIDO">
                   <Font PropertyName="font" name="Dialog" size="10" style="0"/>
                   <Color PropertyName="color" blue="66" green="66" red="0" type="rgb"/>
                 </TitledBorder>
@@ -187,7 +187,7 @@
             <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder justification="1" position="2" title="SEGUNDO APELLIDO">
+                <TitledBorder justification="1" position="2" title="* SEGUNDO APELLIDO">
                   <Font PropertyName="font" name="Dialog" size="10" style="0"/>
                   <Color PropertyName="color" blue="66" green="66" red="0" type="rgb"/>
                 </TitledBorder>
@@ -210,7 +210,7 @@
             <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder justification="1" position="2" title="DISPONIBILIDAD">
+                <TitledBorder justification="1" position="2" title="* DISPONIBILIDAD">
                   <Font PropertyName="font" name="Dialog" size="10" style="0"/>
                   <Color PropertyName="color" blue="66" green="66" red="0" type="rgb"/>
                 </TitledBorder>
